external-crates/move/crates/move-compiler/tests/move_check/parser/ability_modifier_postfix_no_fields.snap
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/ability_modifier_postfix_no_fields.move:5:38
  │
5 │     native struct Foo has copy, drop has store;
  │                                      ^^^
  │                                      │
  │                                      Unexpected 'has'
  │                                      Expected one of: ',', '{', '(', or ';'

